[tool.poetry]
name = "tom"
version = "0.1.0"
description = "Test and investigate FTEs Train Object Model"
authors = ["Horst Duchene <monora@gmail.com>"]
license = "MIT license"

readme = "README.rst"

repository = "https://github.com/monora/tom"

homepage = "https://tom.readthedocs.io"


packages = [
    { include = "tom", from = "."},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
[tool.poetry.dependencies]
# List project dependencies here
click = "^7.0"

[tool.poetry.dev-dependencies]
bump2version = "^0.5.0"
pip = "^18.1"
wheel = "^0.32.1"
watchdog = "^0.9.0"
flake8 = "^3.5.0"
tox = "^3.5.2"
coverage = "^4.4.2"
Sphinx = "^1.8.1"
twine = "^1.12.1"
pytest = "^3.8.2"
pytest-runner = "^4.2"
pytest-cov = "^2.6.0"
setuptools = "^40.5.0"
rstcheck = "^3.3.1"
ptpython = "^2.0.4"
